# api/src/app/Models/Shop.php
@@ -14,4 +14,13 @@ class Shop extends Model
         return $this->hasMany(\App\Models\Rating::class);
 
     }
+
+    protected $fillable = [
+        'shop_id', 'name', 'address', 'logo_image', 'genre', 'url', 'photo'
+    ];
+
+    // $castsプロパティを使用してJSON形式のフィールドをキャストします。
+    /*protected $casts = [
+        'photo' => 'array', // 'array' に変更
+    ];*/
 }
